--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,7 +52,7 @@
     <!--纯色-->
     <color name="color_white">#FFFFFFFF</color>
     <color name="color_red">#FFFF0000</color>
-    <color name="color_balck">#FF000000</color>
+    <color name="color_black">#FF000000</color>
 
 
 
