--- a/app/src/main/res/layout/fragment_register_by_phone_layout.xml
+++ b/app/src/main/res/layout/fragment_register_by_phone_layout.xml
@@ -86,7 +86,7 @@
 
 
         <TextView
-            android:id="@+id/tv_model_commit"
+            android:id="@+id/tv_forget_pwd_submit"
             style="@style/login_model_commit_style"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="37dp"
