--- a/app/src/main/res/layout/layout_login_top_item.xml
+++ b/app/src/main/res/layout/layout_login_top_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fLayout_login_title_bar"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:background="@color/color_white">
@@ -17,7 +18,7 @@
         android:id="@+id/tv_login_top_center"
         style="@style/text_base_singleLine"
         android:layout_gravity="center"
-        android:text="登陆"
+        android:text="登录"
         android:textColor="@color/color_444444"
         android:textSize="22sp" />
 
