--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,7 +65,7 @@
     <style name="login_model_commit_style" parent="text_base_singleLine">
         <item name="android:background">@drawable/btn_common_login_commit_selector</item>
         <item name="android:enabled">false</item>
-        <item name="android:textColor">@color/color_d8d8d8</item>
+        <item name="android:textColor">@color/common_btn_color_state</item>
         <item name="android:textSize">17sp</item>
     </style>
 
