--- a/app/src/main/res/layout/activity_new_home.xml
+++ b/app/src/main/res/layout/activity_new_home.xml
@@ -27,14 +27,14 @@
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
         android:background="@color/color_f9f9f9"
-        android:orientation="horizontal"
-        android:paddingBottom="9dp">
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/btn_home_list"
             style="@style/home_bottom_radio_style"
             android:checked="true"
             android:drawableTop="@drawable/icon_bottom_clever_dog_selector"
+            android:paddingBottom="9dp"
             android:text="加菲狗" />
 
         <RadioButton
@@ -42,6 +42,7 @@
             style="@style/home_bottom_radio_style"
             android:layout_centerHorizontal="true"
             android:drawableTop="@drawable/icon_bottom_wonderful_selector"
+            android:paddingBottom="9dp"
             android:text="每日精彩" />
 
         <RadioButton
@@ -49,6 +50,7 @@
             style="@style/home_bottom_radio_style"
             android:layout_alignParentRight="true"
             android:drawableTop="@drawable/icon_bottom_mine_selector"
+            android:paddingBottom="9dp"
             android:text="我的" />
     </RadioGroup>
 
