--- a/app/src/main/res/layout/fragment_login_model.xml
+++ b/app/src/main/res/layout/fragment_login_model.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/rLayout_login_top"
@@ -16,4 +17,4 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/rLayout_login_top" />
 
-</RelativeLayout>
+</LinearLayout>
