大量修改，增加注册逻辑

--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -91,9 +91,9 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:gravity="center"
-                    android:hint="请输入验证码"
-                    android:maxLength="60"
-                    android:numeric="integer"
+                    android:hint="@string/item_input_verification_code"
+                    android:inputType="numberDecimal"
+                    android:maxLength="6"
                     android:paddingLeft="40dp"
                     android:paddingRight="40dp"
                     android:textColor="@color/color_666666"
