--- a/app/src/main/res/anim/slide_out_left.xml
+++ b/app/src/main/res/anim/slide_out_left.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:anim/accelerate_interpolator">
     <translate
-        android:duration="200"
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromXDelta="0"
         android:toXDelta="-100%p" />
 </set>
