--- a/app/src/main/res/anim/slide_out_right.xml
+++ b/app/src/main/res/anim/slide_out_right.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<set
-    android:interpolator="@android:anim/accelerate_interpolator"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/accelerate_interpolator">
     <translate
+        android:duration="@android:integer/config_mediumAnimTime"
         android:fromXDelta="0"
-        android:toXDelta="100%p"
-        android:duration="400" />
+        android:toXDelta="100%p" />
 </set>
