--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -1,199 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tim="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fLayout_login"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rLayout_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp"
     android:animateLayoutChanges="true"
     android:background="@color/color_white"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/Layout_login_box"
+    <include
+        android:id="@+id/rLayout_login_top"
+        layout="@layout/layout_login_top_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="48dp"
+        android:layout_marginTop="60dp" />
 
-
-        <FrameLayout
-            android:id="@+id/fLayout_account_input_box"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="30dp">
-
-
-            <EditText
-                android:id="@+id/et_login_username"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@null"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:gravity="center"
-                android:hint="请输入手机号/邮箱"
-                android:maxLength="60"
-                android:paddingLeft="40dp"
-                android:paddingRight="40dp"
-                android:textColor="@color/color_666666"
-                android:textColorHint="@color/color_cecece"
-                android:textCursorDrawable="@drawable/bg_common_cursor"
-                android:textSize="15sp" />
-
-            <ImageView
-                android:id="@+id/iv_login_clear_username"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:paddingLeft="10dp"
-                android:paddingRight="19dp"
-                android:src="@drawable/btn_login_clear_text"
-                android:visibility="gone" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@color/color_f2f2f2" />
-        </FrameLayout>
-
-
-        <FrameLayout
-            android:id="@+id/rLayout_pwd_input_box"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_below="@+id/fLayout_account_input_box"
-            android:layout_marginTop="29dp">
-
-            <EditText
-                android:id="@+id/et_login_pwd"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@null"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:gravity="center"
-                android:hint="请输入密码"
-                android:inputType="textPassword"
-                android:maxLength="12"
-                android:paddingLeft="40dp"
-                android:paddingRight="40dp"
-                android:textColor="@color/color_666666"
-                android:textColorHint="@color/color_cecece"
-                android:textCursorDrawable="@drawable/bg_common_cursor"
-                android:textSize="15sp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end|center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/iv_login_clear_pwd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="7dp"
-                    android:src="@drawable/btn_login_clear_text"
-                    android:visibility="invisible" />
-
-                <CheckBox
-                    android:id="@+id/cb_show_pwd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginRight="19dp"
-                    android:background="@drawable/icon_common_show_pwd_selector"
-                    android:button="@null"
-                    android:checked="false"
-                    android:paddingLeft="7dp" />
-
-
-            </LinearLayout>
-
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:background="@color/color_f2f2f2" />
-
-        </FrameLayout>
-
-
-        <com.cylan.jiafeigou.widget.LoginButton
-            android:id="@+id/lb_login_commit"
-            android:layout_width="173dp"
-            android:layout_height="50dp"
-            android:layout_below="@+id/rLayout_pwd_input_box"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="37dp"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="登录"
-            android:textSize="17sp"
-            tim:lb_stroke_color="@color/color_d8d8d8" />
-
-
-        <TextView
-            android:id="@+id/tv_login_forget_pwd"
-            style="@style/text_base_singleLine"
-            android:layout_below="@+id/lb_login_commit"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
-            android:text="忘记密码？"
-            android:textColor="@color/color_999999"
-            android:textSize="12sp" />
-    </RelativeLayout>
-    <!--</LinearLayout>-->
-
-    <RelativeLayout
-        android:layout_gravity="bottom|center_horizontal"
-        android:id="@+id/rLayout_login_third_party"
+    <ViewSwitcher
+        android:id="@+id/vsLayout_login_box"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/rLayout_login_top"
+        android:layout_marginLeft="19dp"
+        android:layout_marginRight="19dp">
+
+        <include layout="@layout/fragment_login_layout_login_box" />
+
+        <include layout="@layout/fragment_login_layout_register_box" />
+    </ViewSwitcher>
 
 
-        <TextView
-            android:id="@+id/tv_qqLogin_commit"
-            style="@style/third_party_login_style"
-            android:layout_marginRight="14dp"
-            android:layout_toLeftOf="@+id/view_third_party_center"
-            android:drawableLeft="@drawable/icon_login_qq"
-            android:padding="10dp"
-            android:text="QQ登录" />
-
-        <View
-            android:id="@+id/view_third_party_center"
-            android:layout_width="1dp"
-            android:layout_height="13dp"
-            android:layout_centerInParent="true"
-            android:background="@color/color_9e9e9e" />
-
-        <TextView
-            android:id="@+id/tv_xlLogin_commit"
-            style="@style/third_party_login_style"
-            android:layout_marginLeft="14dp"
-            android:layout_toRightOf="@+id/view_third_party_center"
-            android:drawableLeft="@drawable/icon_login_weibo"
-            android:padding="10dp"
-            android:text="微博登录" />
-    </RelativeLayout>
-
-
-</FrameLayout>
+</RelativeLayout>
