--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -5,7 +5,7 @@
     android:background="@color/color_white">
 
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rLayout_home_mine_top"
         android:layout_width="match_parent"
         android:layout_height="238dp"
@@ -16,104 +16,114 @@
             android:layout_height="match_parent"
             android:background="#40000000" />
 
-        <com.cylan.jiafeigou.widget.wave.ShadowLayout
-            android:id="@+id/shadowlayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="16dp"
-            tim:sl_cornerRadius="56dp"
-            tim:sl_dx="0dp"
-            tim:sl_dy="2dp"
-            tim:sl_shadowColor="#88000000"
-            tim:sl_shadowRadius="2dp">
-
-            <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
-                android:id="@+id/iv_home_mine_portrait"
-                android:layout_width="76dp"
-                android:layout_height="76dp"
-                android:src="@drawable/icon_mine_head_normal"
-                tim:riv_oval="true" />
-        </com.cylan.jiafeigou.widget.wave.ShadowLayout>
-
-        <TextView
-            android:id="@+id/tv_home_mine_nick"
-            style="@style/text_base_singleLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/shadowlayout"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
-            android:text="用户昵称"
-            android:textColor="@color/color_white"
-            android:textSize="19sp" />
-
-
-        <ImageView
-            android:id="@+id/iv_mine_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="13dp"
-            android:src="@drawable/icon_mine_message" />
-
-        <TextView
-            android:id="@+id/tv_home_mine_msg_count"
-            style="@style/text_base_singleLine"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_alignLeft="@id/iv_mine_msg"
-            android:layout_alignTop="@id/iv_mine_msg"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/shape_mine_msg_count_oval"
-            android:text="77"
-            android:textColor="@android:color/white"
-            android:textSize="9sp" />
-
-    </RelativeLayout>
-
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/rLayout_home_mine_top"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
-            <com.cylan.jiafeigou.widget.HomeMineItemView
-                android:id="@+id/home_mine_item_friend"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                tim:leftDrawable="@drawable/icon_mine_friend"
-                tim:rightDrawable="@drawable/icon_mine_arrow_next"
-                tim:text="亲朋好友" />
 
+            <com.cylan.jiafeigou.widget.wave.ShadowLayout
+                android:id="@+id/shadow_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                tim:sl_cornerRadius="56dp"
+                tim:sl_dx="0dp"
+                tim:sl_dy="2dp"
+                tim:sl_shadowColor="#88000000"
+                tim:sl_shadowRadius="2dp">
 
-            <com.cylan.jiafeigou.widget.HomeMineItemView
-                android:id="@+id/home_mine_item_share"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                tim:leftDrawable="@drawable/icon_mine_share"
-                tim:rightDrawable="@drawable/icon_mine_arrow_next"
-                tim:text="分享设备" />
+                <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
+                    android:id="@+id/iv_home_mine_portrait"
+                    android:layout_width="76dp"
+                    android:layout_height="76dp"
+                    android:src="@drawable/icon_mine_head_normal"
+                    tim:riv_oval="true" />
+            </com.cylan.jiafeigou.widget.wave.ShadowLayout>
 
-
-            <com.cylan.jiafeigou.widget.HomeMineItemView
-                android:id="@+id/home_mine_item_help"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                tim:leftDrawable="@drawable/icon_mine_hlep"
-                tim:rightDrawable="@drawable/icon_mine_arrow_next"
-                tim:text="帮助与反馈" />
-
-
-            <com.cylan.jiafeigou.widget.HomeMineItemView
-                android:id="@+id/home_mine_item_settings"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                tim:leftDrawable="@drawable/icon_mine_setting"
-                tim:rightDrawable="@drawable/icon_mine_arrow_next"
-                tim:text="设置" />
+            <TextView
+                android:id="@+id/tv_home_mine_nick"
+                style="@style/text_base_singleLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/shadow_layout"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="13dp"
+                android:text="用户昵称"
+                android:textColor="@color/color_white"
+                android:textSize="19sp" />
         </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/rLayout_msg_box"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:layout_marginTop="30dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_mine_message" />
+
+            <com.cylan.jiafeigou.widget.MsgTextView
+                android:id="@+id/tv_home_mine_msg_count"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="top|end"
+                android:padding="10dp"
+                android:text="9"
+                android:textColor="@color/color_white"
+                android:textSize="9sp" />
+        </FrameLayout>
+
+
+    </FrameLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rLayout_home_mine_top"
+        android:orientation="vertical">
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_friend"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tim:leftDrawable="@drawable/icon_mine_friend"
+            tim:rightDrawable="@drawable/icon_mine_arrow_next"
+            tim:text="亲朋好友" />
+
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_share"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tim:leftDrawable="@drawable/icon_mine_share"
+            tim:rightDrawable="@drawable/icon_mine_arrow_next"
+            tim:text="分享设备" />
+
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_help"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tim:leftDrawable="@drawable/icon_mine_hlep"
+            tim:rightDrawable="@drawable/icon_mine_arrow_next"
+            tim:text="帮助与反馈" />
+
+
+        <com.cylan.jiafeigou.widget.HomeMineItemView
+            android:id="@+id/home_mine_item_settings"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            tim:leftDrawable="@drawable/icon_mine_setting"
+            tim:rightDrawable="@drawable/icon_mine_arrow_next"
+            tim:text="设置" />
+    </LinearLayout>
 
 </RelativeLayout>
