--- a/app/src/main/res/layout/fragment_login_layout_login_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_login_box.xml
@@ -127,9 +127,11 @@
         android:layout_below="@+id/rLayout_pwd_input_box"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="37dp"
+        android:enabled="false"
         android:gravity="center"
         android:maxLines="1"
         android:text="登录"
+        android:textColor="@color/common_btn_color_state"
         android:textSize="17sp"
         tim:lb_stroke_color="@color/color_d8d8d8" />
 
