--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/rLayout_login_top"
@@ -12,123 +13,128 @@
         android:layout_height="48dp"
         android:layout_marginTop="60dp" />
 
-    <FrameLayout
-        android:id="@+id/fLayout_forget_container"
+    <ViewSwitcher
+        android:id="@+id/vs_set_account_pwd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/rLayout_login_top">
+        android:layout_marginLeft="19dp"
+        android:layout_marginRight="19dp">
 
-        <LinearLayout
-            android:id="@+id/lLayout_register_input"
+        <FrameLayout
+            android:id="@+id/fLayout_forget_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="19dp"
-            android:layout_marginRight="19dp"
-            android:layout_marginTop="44dp"
-            android:animateLayoutChanges="true"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <FrameLayout
-                android:id="@+id/fLayout_account_input_box"
+            <LinearLayout
+                android:id="@+id/lLayout_register_input"
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="30dp">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical">
 
-
-                <EditText
-                    android:id="@+id/et_forget_username"
+                <FrameLayout
+                    android:id="@+id/fLayout_account_input_box"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@null"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:gravity="center"
-                    android:hint="请输入手机号/邮箱"
-                    android:maxLength="60"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp"
-                    android:textColor="@color/color_666666"
-                    android:textColorHint="@color/color_cecece"
-                    android:textCursorDrawable="@drawable/bg_common_cursor"
-                    android:textSize="15sp" />
+                    android:layout_height="48dp"
+                    android:layout_marginTop="30dp">
 
-                <ImageView
-                    android:id="@+id/iv_forget_clear_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="19dp"
-                    android:src="@drawable/btn_login_clear_text"
-                    android:visibility="gone" />
 
-                <View
+                    <EditText
+                        android:id="@+id/et_forget_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@null"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:hint="请输入手机号/邮箱"
+                        android:maxLength="60"
+                        android:textColor="@color/color_666666"
+                        android:textColorHint="@color/color_cecece"
+                        android:textCursorDrawable="@drawable/bg_common_cursor"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/iv_forget_clear_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:src="@drawable/btn_login_clear_text"
+                        android:visibility="gone" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_f2f2f2" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/fLayout_verification_code_input_box"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_gravity="bottom"
-                    android:background="@color/color_f2f2f2" />
-            </FrameLayout>
-
-            <FrameLayout
-                android:id="@+id/fLayout_verification_code_input_box"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="30dp"
-                android:visibility="gone">
+                    android:layout_height="48dp"
+                    android:layout_marginTop="30dp"
+                    android:visibility="gone">
 
 
-                <EditText
-                    android:id="@+id/et_verification_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@null"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:gravity="center"
-                    android:hint="@string/item_input_verification_code"
-                    android:inputType="numberDecimal"
-                    android:maxLength="6"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp"
-                    android:textColor="@color/color_666666"
-                    android:textColorHint="@color/color_cecece"
-                    android:textCursorDrawable="@drawable/bg_common_cursor"
-                    android:textSize="15sp" />
+                    <EditText
+                        android:id="@+id/et_verification_input"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="@null"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:gravity="center"
+                        android:hint="@string/item_input_verification_code"
+                        android:inputType="numberDecimal"
+                        android:maxLength="6"
+                        android:paddingLeft="40dp"
+                        android:paddingRight="40dp"
+                        android:textColor="@color/color_666666"
+                        android:textColorHint="@color/color_cecece"
+                        android:textCursorDrawable="@drawable/bg_common_cursor"
+                        android:textSize="15sp" />
+
+
+                    <TextView
+                        android:id="@+id/tv_meter_get_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:enabled="false"
+                        android:gravity="center"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:textColor="@color/common_btn_color_state" />
+
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_f2f2f2" />
+                </FrameLayout>
 
 
                 <TextView
-                    android:id="@+id/tv_meter_get_code"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:enabled="false"
-                    android:gravity="center"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textColor="@color/common_btn_color_state" />
+                    android:id="@+id/tv_forget_pwd_submit"
+                    style="@style/login_model_commit_style"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="37dp"
+                    android:text="继续" />
+            </LinearLayout>
+        </FrameLayout>
 
+        <include
+            android:id="@+id/layout_to_be_update"
+            layout="@layout/fragment_reset_pwd" />
+    </ViewSwitcher>
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_gravity="bottom"
-                    android:background="@color/color_f2f2f2" />
-            </FrameLayout>
-
-
-            <TextView
-                android:id="@+id/tv_forget_pwd_submit"
-                style="@style/login_model_commit_style"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="37dp"
-                android:text="继续" />
-
-        </LinearLayout>
-    </FrameLayout>
-</RelativeLayout>
+</LinearLayout>
