--- a/app/src/main/res/layout/fragment_forget_pwd.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd.xml
@@ -14,6 +14,8 @@
         android:layout_marginTop="60dp" />
 
     <ViewSwitcher
+        android:inAnimation="@anim/slide_in_right_overshoot"
+        android:outAnimation="@anim/slide_out_left"
         android:id="@+id/vs_set_account_pwd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -134,7 +136,7 @@
 
         <include
             android:id="@+id/layout_to_be_update"
-            layout="@layout/fragment_reset_pwd" />
+            layout="@layout/fragment_set_new_pwd" />
     </ViewSwitcher>
 
 </LinearLayout>
