--- a/app/src/main/res/layout/fragment_login_layout.xml
+++ b/app/src/main/res/layout/fragment_login_layout.xml
@@ -19,9 +19,7 @@
         android:id="@+id/vsLayout_login_box"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/rLayout_login_top"
-        android:layout_marginLeft="19dp"
-        android:layout_marginRight="19dp">
+        android:layout_below="@+id/rLayout_login_top">
 
         <include layout="@layout/fragment_login_layout_login_box" />
 
