--- a/app/src/main/res/layout/fragment_login_layout_register_box.xml
+++ b/app/src/main/res/layout/fragment_login_layout_register_box.xml
@@ -46,6 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:src="@drawable/btn_login_clear_text"
@@ -55,6 +57,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_gravity="bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@color/color_f2f2f2" />
         </FrameLayout>
 
@@ -93,6 +97,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:enabled="false"
                 android:gravity="center"
                 android:paddingLeft="10dp"
@@ -104,6 +110,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_gravity="bottom"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@color/color_f2f2f2" />
         </FrameLayout>
 
