--- a/app/src/main/res/layout/fragment_set_new_pwd.xml
+++ b/app/src/main/res/layout/fragment_set_new_pwd.xml
@@ -7,13 +7,13 @@
     tools:context=".n.view.login.ResetPwdFragment">
 
     <FrameLayout
-        android:id="@+id/rLayout_rst_pwd_input_box"
+        android:id="@+id/rLayout_new_pwd_input_box"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="29dp">
 
         <EditText
-            android:id="@+id/et_rst_pwd_input"
+            android:id="@+id/et_new_pwd_input"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -39,26 +39,23 @@
             android:layout_gravity="end|center_vertical"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/iv_new_clear_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:padding="10dp"
+                android:src="@drawable/btn_login_clear_text"
+                android:visibility="gone" />
+
             <CheckBox
-                android:id="@+id/cb_show_pwd"
+                android:id="@+id/cb_new_pwd_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/icon_common_show_pwd_selector"
                 android:button="@null"
-                android:checked="false"
-                android:paddingLeft="15dp"
-                android:paddingRight="7dp" />
-
-            <ImageView
-                android:id="@+id/iv_rst_clear_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="7dp"
-                android:paddingRight="19dp"
-                android:src="@drawable/btn_login_clear_text"
-                android:visibility="invisible" />
+                android:checked="false" />
 
 
         </LinearLayout>
@@ -67,14 +64,12 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:background="@color/color_f2f2f2" />
 
     </FrameLayout>
 
     <TextView
-        android:id="@+id/tv_rst_pwd_submit"
+        android:id="@+id/tv_new_pwd_submit"
         style="@style/login_model_commit_style"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="37dp"
